Update keyboard texts for many languages to separate misc keys
This was done by looking at characters listed on the Wikipedia language recognition chart[0] for each language, finding the last character in the array that the language uses and splitting the rest off into misc. This was partially automated, but there is potential that there may be errors for some languages. All of the keys should still be there if misc keys are enabled, so the keyboard should still be usable for all affected languages even if there were errors, if misc keys are enabled.

[0] https://en.wikipedia.org/wiki/Wikipedia:Language_recognition_chart

--- a/tools/make-keyboard-text-py/locales/af.json
+++ b/tools/make-keyboard-text-py/locales/af.json
@@ -2,7 +2,29 @@
     "locale": "af",
     "morekeys": {
         "a": [
-            "á",
+            "á"
+        ],
+        "e": [
+            "é",
+            "è",
+            "ê",
+            "ë"
+        ],
+        "i": [
+            "í",
+            "ì",
+            "ï",
+            "î"
+        ],
+        "o": [
+            "ó",
+            "ô"
+        ],
+        "u": [
+            "ú",
+            "û"
+        ],
+        "misc_a": [
             "â",
             "ä",
             "à",
@@ -11,27 +33,17 @@
             "å",
             "ā"
         ],
-        "e": [
-            "é",
-            "è",
-            "ê",
-            "ë",
+        "misc_e": [
             "ę",
             "ė",
             "ē"
         ],
-        "i": [
-            "í",
-            "ì",
-            "ï",
-            "î",
+        "misc_i": [
             "į",
             "ī",
             "ĳ"
         ],
-        "o": [
-            "ó",
-            "ô",
+        "misc_o": [
             "ö",
             "ò",
             "õ",
@@ -39,20 +51,10 @@
             "ø",
             "ō"
         ],
-        "u": [
-            "ú",
-            "û",
+        "misc_u": [
             "ü",
             "ù",
             "ū"
-        ],
-        "n": [
-            "ñ",
-            "ń"
-        ],
-        "y": [
-            "ý",
-            "ĳ"
         ]
     },
     "keyspec": {},
