--- a/tools/make-keyboard-text-py/locales/ca.json
+++ b/tools/make-keyboard-text-py/locales/ca.json
@@ -2,7 +2,28 @@
     "locale": "ca",
     "morekeys": {
         "a": [
-            "à",
+            "à"
+        ],
+        "c": [
+            "ç"
+        ],
+        "e": [
+            "è",
+            "é"
+        ],
+        "i": [
+            "í",
+            "ï"
+        ],
+        "o": [
+            "ò",
+            "ó"
+        ],
+        "u": [
+            "ú",
+            "ü"
+        ],
+        "misc_a": [
             "á",
             "ä",
             "â",
@@ -13,26 +34,24 @@
             "ā",
             "ª"
         ],
-        "e": [
-            "è",
-            "é",
+        "misc_c": [
+            "ć",
+            "č"
+        ],
+        "misc_e": [
             "ë",
             "ê",
             "ę",
             "ė",
             "ē"
         ],
-        "i": [
-            "í",
-            "ï",
+        "misc_i": [
             "ì",
             "î",
             "į",
             "ī"
         ],
-        "o": [
-            "ò",
-            "ó",
+        "misc_o": [
             "ö",
             "ô",
             "õ",
@@ -41,25 +60,10 @@
             "ō",
             "º"
         ],
-        "u": [
-            "ú",
-            "ü",
+        "misc_u": [
             "ù",
             "û",
             "ū"
-        ],
-        "n": [
-            "ñ",
-            "ń"
-        ],
-        "c": [
-            "ç",
-            "ć",
-            "č"
-        ],
-        "l": [
-            "l·l",
-            "ł"
         ],
         "punctuation": [
             "!autoColumnOrder!9",
