--- a/tools/make-keyboard-text-py/locales/cs.json
+++ b/tools/make-keyboard-text-py/locales/cs.json
@@ -2,7 +2,47 @@
     "locale": "cs",
     "morekeys": {
         "a": [
-            "á",
+            "á"
+        ],
+        "c": [
+            "č"
+        ],
+        "d": [
+            "ď"
+        ],
+        "e": [
+            "é",
+            "ě"
+        ],
+        "i": [
+            "í"
+        ],
+        "n": [
+            "ň"
+        ],
+        "o": [
+            "ó"
+        ],
+        "r": [
+            "ř"
+        ],
+        "s": [
+            "š"
+        ],
+        "t": [
+            "ť"
+        ],
+        "u": [
+            "ú",
+            "ů"
+        ],
+        "y": [
+            "ý"
+        ],
+        "z": [
+            "ž"
+        ],
+        "misc_a": [
             "à",
             "â",
             "ä",
@@ -11,9 +51,11 @@
             "å",
             "ā"
         ],
-        "e": [
-            "é",
-            "ě",
+        "misc_c": [
+            "ç",
+            "ć"
+        ],
+        "misc_e": [
             "è",
             "ê",
             "ë",
@@ -21,16 +63,18 @@
             "ė",
             "ē"
         ],
-        "i": [
-            "í",
+        "misc_i": [
             "î",
             "ï",
             "ì",
             "į",
             "ī"
         ],
-        "o": [
-            "ó",
+        "misc_n": [
+            "ñ",
+            "ń"
+        ],
+        "misc_o": [
             "ö",
             "ô",
             "ò",
@@ -39,44 +83,20 @@
             "ø",
             "ō"
         ],
-        "u": [
-            "ú",
-            "ů",
+        "misc_s": [
+            "ß",
+            "ś"
+        ],
+        "misc_u": [
             "û",
             "ü",
             "ù",
             "ū"
         ],
-        "s": [
-            "š",
-            "ß",
-            "ś"
-        ],
-        "n": [
-            "ň",
-            "ñ",
-            "ń"
-        ],
-        "c": [
-            "č",
-            "ç",
-            "ć"
-        ],
-        "y": [
-            "ý",
+        "misc_y": [
             "ÿ"
         ],
-        "d": [
-            "ď"
-        ],
-        "r": [
-            "ř"
-        ],
-        "t": [
-            "ť"
-        ],
-        "z": [
-            "ž",
+        "misc_z": [
             "ź",
             "ż"
         ]
