--- a/tools/make-keyboard-text-py/locales/da.json
+++ b/tools/make-keyboard-text-py/locales/da.json
@@ -3,7 +3,12 @@
     "morekeys": {
         "a": [
             "å",
-            "æ",
+            "æ"
+        ],
+        "o": [
+            "ø"
+        ],
+        "misc_a": [
             "á",
             "ä",
             "à",
@@ -11,16 +16,7 @@
             "ã",
             "ā"
         ],
-        "e": [
-            "é",
-            "ë"
-        ],
-        "i": [
-            "í",
-            "ï"
-        ],
-        "o": [
-            "ø",
+        "misc_o": [
             "ö",
             "ó",
             "ô",
@@ -28,32 +24,6 @@
             "õ",
             "œ",
             "ō"
-        ],
-        "u": [
-            "ú",
-            "ü",
-            "û",
-            "ù",
-            "ū"
-        ],
-        "s": [
-            "ß",
-            "ś",
-            "š"
-        ],
-        "n": [
-            "ñ",
-            "ń"
-        ],
-        "y": [
-            "ý",
-            "ÿ"
-        ],
-        "d": [
-            "ð"
-        ],
-        "l": [
-            "ł"
         ],
         "nordic_row2_10": [
             "ä"
