--- a/tools/make-keyboard-text-py/locales/de.json
+++ b/tools/make-keyboard-text-py/locales/de.json
@@ -2,7 +2,18 @@
     "locale": "de",
     "morekeys": {
         "a": [
-            "ä",
+            "ä"
+        ],
+        "o": [
+            "ö"
+        ],
+        "s": [
+            "ß"
+        ],
+        "u": [
+            "ü"
+        ],
+        "misc_a": [
             "%",
             "â",
             "à",
@@ -12,15 +23,7 @@
             "å",
             "ā"
         ],
-        "e": [
-            "é",
-            "è",
-            "ê",
-            "ë",
-            "ė"
-        ],
-        "o": [
-            "ö",
+        "misc_o": [
             "%",
             "ô",
             "ò",
@@ -30,22 +33,16 @@
             "ø",
             "ō"
         ],
-        "u": [
-            "ü",
+        "misc_s": [
+            "ś",
+            "š"
+        ],
+        "misc_u": [
             "%",
             "û",
             "ù",
             "ú",
             "ū"
-        ],
-        "s": [
-            "ß",
-            "ś",
-            "š"
-        ],
-        "n": [
-            "ñ",
-            "ń"
         ],
         "swiss_row1_11": [
             "è"
