--- a/tools/make-keyboard-text-py/locales/eo.json
+++ b/tools/make-keyboard-text-py/locales/eo.json
@@ -1,53 +1,43 @@
 {
     "locale": "eo",
     "morekeys": {
-        "a": [
-            "á",
-            "à",
-            "â",
-            "ä",
-            "æ",
-            "ã",
-            "å",
-            "ā",
-            "ă",
-            "ą",
-            "ª"
+        "c": [
+            "ĉ"
         ],
-        "e": [
-            "é",
-            "ě",
-            "è",
-            "ê",
-            "ë",
-            "ę",
-            "ė",
-            "ē"
+        "g": [
+            "ĝ"
         ],
-        "i": [
-            "í",
-            "î",
-            "ï",
-            "ĩ",
-            "ì",
-            "į",
-            "ī",
-            "ı",
-            "ĳ"
+        "h": [
+            "ĥ"
         ],
-        "o": [
-            "ó",
-            "ö",
-            "ô",
-            "ò",
-            "õ",
-            "œ",
-            "ø",
-            "ō",
-            "ő",
-            "º"
+        "s": [
+            "ŝ"
         ],
         "u": [
+            "ŭ"
+        ],
+        "misc_c": [
+            "ć",
+            "č",
+            "ç",
+            "ċ"
+        ],
+        "misc_g": [
+            "ğ",
+            "ġ",
+            "ģ"
+        ],
+        "misc_h": [
+            "ħ"
+        ],
+        "misc_s": [
+            "ß",
+            "š",
+            "ś",
+            "ș",
+            "ş"
+        ],
+        "misc_u": [
             "ú",
             "ů",
             "û",
@@ -58,89 +48,6 @@
             "ű",
             "ų",
             "µ"
-        ],
-        "s": [
-            "ß",
-            "š",
-            "ś",
-            "ș",
-            "ş"
-        ],
-        "n": [
-            "ñ",
-            "ń",
-            "ņ",
-            "ň",
-            "ŉ",
-            "ŋ"
-        ],
-        "c": [
-            "ć",
-            "č",
-            "ç",
-            "ċ"
-        ],
-        "y": [
-            "y",
-            "ý",
-            "ŷ",
-            "ÿ",
-            "þ"
-        ],
-        "d": [
-            "ð",
-            "ď",
-            "đ"
-        ],
-        "r": [
-            "ř",
-            "ŕ",
-            "ŗ"
-        ],
-        "t": [
-            "ť",
-            "ț",
-            "ţ",
-            "ŧ"
-        ],
-        "z": [
-            "ź",
-            "ż",
-            "ž"
-        ],
-        "k": [
-            "ķ",
-            "ĸ"
-        ],
-        "l": [
-            "ĺ",
-            "ļ",
-            "ľ",
-            "ŀ",
-            "ł"
-        ],
-        "g": [
-            "ğ",
-            "ġ",
-            "ģ"
-        ],
-        "v": [
-            "w",
-            "ŵ"
-        ],
-        "h": [
-            "ĥ",
-            "ħ"
-        ],
-        "w": [
-            "w",
-            "ŵ"
-        ],
-        "q": [
-            "q"
-        ],
-        "x": [
-            "x"
         ]
     },
     "keyspec": {
