--- a/tools/make-keyboard-text-py/locales/es.json
+++ b/tools/make-keyboard-text-py/locales/es.json
@@ -2,7 +2,25 @@
     "locale": "es",
     "morekeys": {
         "a": [
-            "á",
+            "á"
+        ],
+        "e": [
+            "é"
+        ],
+        "i": [
+            "í"
+        ],
+        "n": [
+            "ñ"
+        ],
+        "o": [
+            "ó"
+        ],
+        "u": [
+            "ú",
+            "ü"
+        ],
+        "misc_a": [
             "à",
             "ä",
             "â",
@@ -13,8 +31,7 @@
             "ā",
             "ª"
         ],
-        "e": [
-            "é",
+        "misc_e": [
             "è",
             "ë",
             "ê",
@@ -22,16 +39,17 @@
             "ė",
             "ē"
         ],
-        "i": [
-            "í",
+        "misc_i": [
             "ï",
             "ì",
             "î",
             "į",
             "ī"
         ],
-        "o": [
-            "ó",
+        "misc_n": [
+            "ń"
+        ],
+        "misc_o": [
             "ò",
             "ö",
             "ô",
@@ -41,21 +59,10 @@
             "ō",
             "º"
         ],
-        "u": [
-            "ú",
-            "ü",
+        "misc_u": [
             "ù",
             "û",
             "ū"
-        ],
-        "n": [
-            "ñ",
-            "ń"
-        ],
-        "c": [
-            "ç",
-            "ć",
-            "č"
         ],
         "punctuation": [
             "!autoColumnOrder!9",
