--- a/tools/make-keyboard-text-py/locales/et.json
+++ b/tools/make-keyboard-text-py/locales/et.json
@@ -2,7 +2,22 @@
     "locale": "et",
     "morekeys": {
         "a": [
-            "ä",
+            "ä"
+        ],
+        "o": [
+            "ö",
+            "õ"
+        ],
+        "s": [
+            "š"
+        ],
+        "u": [
+            "ü"
+        ],
+        "z": [
+            "ž"
+        ],
+        "misc_a": [
             "ā",
             "à",
             "á",
@@ -12,28 +27,7 @@
             "æ",
             "ą"
         ],
-        "e": [
-            "ē",
-            "è",
-            "ė",
-            "é",
-            "ê",
-            "ë",
-            "ę",
-            "ě"
-        ],
-        "i": [
-            "ī",
-            "ì",
-            "į",
-            "í",
-            "î",
-            "ï",
-            "ı"
-        ],
-        "o": [
-            "ö",
-            "õ",
+        "misc_o": [
             "ò",
             "ó",
             "ô",
@@ -41,8 +35,12 @@
             "ő",
             "ø"
         ],
-        "u": [
-            "ü",
+        "misc_s": [
+            "ß",
+            "ś",
+            "ş"
+        ],
+        "misc_u": [
             "ū",
             "ų",
             "ù",
@@ -51,55 +49,9 @@
             "ů",
             "ű"
         ],
-        "s": [
-            "š",
-            "ß",
-            "ś",
-            "ş"
-        ],
-        "n": [
-            "ņ",
-            "ñ",
-            "ń"
-        ],
-        "c": [
-            "č",
-            "ç",
-            "ć"
-        ],
-        "y": [
-            "ý",
-            "ÿ"
-        ],
-        "d": [
-            "ď"
-        ],
-        "r": [
-            "ŗ",
-            "ř",
-            "ŕ"
-        ],
-        "t": [
-            "ţ",
-            "ť"
-        ],
-        "z": [
-            "ž",
+        "misc_z": [
             "ż",
             "ź"
-        ],
-        "k": [
-            "ķ"
-        ],
-        "l": [
-            "ļ",
-            "ł",
-            "ĺ",
-            "ľ"
-        ],
-        "g": [
-            "ģ",
-            "ğ"
         ],
         "nordic_row2_10": [
             "õ"
