--- a/tools/make-keyboard-text-py/locales/fi.json
+++ b/tools/make-keyboard-text-py/locales/fi.json
@@ -3,7 +3,18 @@
     "morekeys": {
         "a": [
             "ä",
-            "å",
+            "å"
+        ],
+        "o": [
+            "ö"
+        ],
+        "s": [
+            "š"
+        ],
+        "z": [
+            "ž"
+        ],
+        "misc_a": [
             "æ",
             "à",
             "á",
@@ -11,8 +22,7 @@
             "ã",
             "ā"
         ],
-        "o": [
-            "ö",
+        "misc_o": [
             "ø",
             "ô",
             "ò",
@@ -21,16 +31,11 @@
             "œ",
             "ō"
         ],
-        "u": [
-            "ü"
-        ],
-        "s": [
-            "š",
+        "misc_s": [
             "ß",
             "ś"
         ],
-        "z": [
-            "ž",
+        "misc_z": [
             "ź",
             "ż"
         ],
