--- a/tools/make-keyboard-text-py/locales/fr.json
+++ b/tools/make-keyboard-text-py/locales/fr.json
@@ -5,7 +5,37 @@
             "à",
             "â",
             "%",
-            "æ",
+            "æ"
+        ],
+        "c": [
+            "ç"
+        ],
+        "e": [
+            "é",
+            "è",
+            "ê",
+            "ë"
+        ],
+        "i": [
+            "î",
+            "%",
+            "ï"
+        ],
+        "o": [
+            "ô",
+            "œ"
+        ],
+        "u": [
+            "ù",
+            "û",
+            "%",
+            "ü"
+        ],
+        "y": [
+            "%",
+            "ÿ"
+        ],
+        "misc_a": [
             "á",
             "ä",
             "ã",
@@ -13,28 +43,24 @@
             "ā",
             "ª"
         ],
-        "e": [
-            "é",
-            "è",
-            "ê",
-            "ë",
+        "misc_c": [
+            "%",
+            "ć",
+            "č"
+        ],
+        "misc_e": [
             "%",
             "ę",
             "ė",
             "ē"
         ],
-        "i": [
-            "î",
-            "%",
-            "ï",
+        "misc_i": [
             "ì",
             "í",
             "į",
             "ī"
         ],
-        "o": [
-            "ô",
-            "œ",
+        "misc_o": [
             "%",
             "ö",
             "ò",
@@ -44,23 +70,9 @@
             "ō",
             "º"
         ],
-        "u": [
-            "ù",
-            "û",
-            "%",
-            "ü",
+        "misc_u": [
             "ú",
             "ū"
-        ],
-        "c": [
-            "ç",
-            "%",
-            "ć",
-            "č"
-        ],
-        "y": [
-            "%",
-            "ÿ"
         ],
         "swiss_row1_11": [
             "ü"
