--- a/tools/make-keyboard-text-py/locales/hr.json
+++ b/tools/make-keyboard-text-py/locales/hr.json
@@ -1,27 +1,29 @@
 {
     "locale": "hr",
     "morekeys": {
-        "s": [
-            "š",
-            "ś",
-            "ß"
-        ],
-        "n": [
-            "ñ",
-            "ń"
-        ],
-        "z": [
-            "ž",
-            "ź",
-            "ż"
-        ],
         "c": [
             "č",
-            "ć",
-            "ç"
+            "ć"
         ],
         "d": [
             "đ"
+        ],
+        "s": [
+            "š"
+        ],
+        "z": [
+            "ž"
+        ],
+        "misc_c": [
+            "ç"
+        ],
+        "misc_s": [
+            "ś",
+            "ß"
+        ],
+        "misc_z": [
+            "ź",
+            "ż"
         ]
     },
     "keyspec": {},
