--- a/tools/make-keyboard-text-py/locales/hu.json
+++ b/tools/make-keyboard-text-py/locales/hu.json
@@ -2,7 +2,25 @@
     "locale": "hu",
     "morekeys": {
         "a": [
-            "á",
+            "á"
+        ],
+        "e": [
+            "é"
+        ],
+        "i": [
+            "í"
+        ],
+        "o": [
+            "ó",
+            "ö",
+            "ő"
+        ],
+        "u": [
+            "ú",
+            "ü",
+            "ű"
+        ],
+        "misc_a": [
             "à",
             "â",
             "ä",
@@ -11,8 +29,7 @@
             "å",
             "ā"
         ],
-        "e": [
-            "é",
+        "misc_e": [
             "è",
             "ê",
             "ë",
@@ -20,18 +37,14 @@
             "ė",
             "ē"
         ],
-        "i": [
-            "í",
+        "misc_i": [
             "î",
             "ï",
             "ì",
             "į",
             "ī"
         ],
-        "o": [
-            "ó",
-            "ö",
-            "ő",
+        "misc_o": [
             "ô",
             "ò",
             "õ",
@@ -39,10 +52,7 @@
             "ø",
             "ō"
         ],
-        "u": [
-            "ú",
-            "ü",
-            "ű",
+        "misc_u": [
             "û",
             "ù",
             "ū"
