--- a/tools/make-keyboard-text-py/locales/is.json
+++ b/tools/make-keyboard-text-py/locales/is.json
@@ -4,15 +4,38 @@
         "a": [
             "á",
             "ä",
-            "æ",
+            "æ"
+        ],
+        "d": [
+            "ð"
+        ],
+        "e": [
+            "é"
+        ],
+        "i": [
+            "í"
+        ],
+        "o": [
+            "ó",
+            "ö"
+        ],
+        "t": [
+            "þ"
+        ],
+        "u": [
+            "ú"
+        ],
+        "y": [
+            "ý"
+        ],
+        "misc_a": [
             "å",
             "à",
             "â",
             "ã",
             "ā"
         ],
-        "e": [
-            "é",
+        "misc_e": [
             "ë",
             "è",
             "ê",
@@ -20,17 +43,14 @@
             "ė",
             "ē"
         ],
-        "i": [
-            "í",
+        "misc_i": [
             "ï",
             "î",
             "ì",
             "į",
             "ī"
         ],
-        "o": [
-            "ó",
-            "ö",
+        "misc_o": [
             "ô",
             "ò",
             "õ",
@@ -38,22 +58,14 @@
             "ø",
             "ō"
         ],
-        "u": [
-            "ú",
+        "misc_u": [
             "ü",
             "û",
             "ù",
             "ū"
         ],
-        "y": [
-            "ý",
+        "misc_y": [
             "ÿ"
-        ],
-        "d": [
-            "ð"
-        ],
-        "t": [
-            "þ"
         ]
     },
     "keyspec": {},
