--- a/tools/make-keyboard-text-py/locales/it.json
+++ b/tools/make-keyboard-text-py/locales/it.json
@@ -2,7 +2,22 @@
     "locale": "it",
     "morekeys": {
         "a": [
-            "à",
+            "à"
+        ],
+        "e": [
+            "è",
+            "é"
+        ],
+        "i": [
+            "ì"
+        ],
+        "o": [
+            "ò"
+        ],
+        "u": [
+            "ù"
+        ],
+        "misc_a": [
             "á",
             "â",
             "ä",
@@ -12,25 +27,21 @@
             "ā",
             "ª"
         ],
-        "e": [
-            "è",
-            "é",
+        "misc_e": [
             "ê",
             "ë",
             "ę",
             "ė",
             "ē"
         ],
-        "i": [
-            "ì",
+        "misc_i": [
             "í",
             "î",
             "ï",
             "į",
             "ī"
         ],
-        "o": [
-            "ò",
+        "misc_o": [
             "ó",
             "ô",
             "ö",
@@ -40,8 +51,7 @@
             "ō",
             "º"
         ],
-        "u": [
-            "ù",
+        "misc_u": [
             "ú",
             "û",
             "ü",
