--- a/tools/make-keyboard-text-py/locales/lv.json
+++ b/tools/make-keyboard-text-py/locales/lv.json
@@ -2,7 +2,45 @@
     "locale": "lv",
     "morekeys": {
         "a": [
-            "ā",
+            "ā"
+        ],
+        "c": [
+            "č"
+        ],
+        "e": [
+            "ē"
+        ],
+        "g": [
+            "ģ"
+        ],
+        "i": [
+            "ī"
+        ],
+        "k": [
+            "ķ"
+        ],
+        "l": [
+            "ļ"
+        ],
+        "n": [
+            "ņ"
+        ],
+        "o": [
+            "ō"
+        ],
+        "r": [
+            "ŗ"
+        ],
+        "s": [
+            "š"
+        ],
+        "u": [
+            "ū"
+        ],
+        "z": [
+            "ž"
+        ],
+        "misc_a": [
             "à",
             "á",
             "â",
@@ -12,8 +50,11 @@
             "æ",
             "ą"
         ],
-        "e": [
-            "ē",
+        "misc_c": [
+            "ç",
+            "ć"
+        ],
+        "misc_e": [
             "ė",
             "è",
             "é",
@@ -22,8 +63,10 @@
             "ę",
             "ě"
         ],
-        "i": [
-            "ī",
+        "misc_g": [
+            "ğ"
+        ],
+        "misc_i": [
             "į",
             "ì",
             "í",
@@ -31,7 +74,16 @@
             "ï",
             "ı"
         ],
-        "o": [
+        "misc_l": [
+            "ł",
+            "ĺ",
+            "ľ"
+        ],
+        "misc_n": [
+            "ñ",
+            "ń"
+        ],
+        "misc_o": [
             "ò",
             "ó",
             "ô",
@@ -41,8 +93,16 @@
             "ő",
             "ø"
         ],
-        "u": [
-            "ū",
+        "misc_r": [
+            "ř",
+            "ŕ"
+        ],
+        "misc_s": [
+            "ß",
+            "ś",
+            "ş"
+        ],
+        "misc_u": [
             "ų",
             "ù",
             "ú",
@@ -51,55 +111,9 @@
             "ů",
             "ű"
         ],
-        "s": [
-            "š",
-            "ß",
-            "ś",
-            "ş"
-        ],
-        "n": [
-            "ņ",
-            "ñ",
-            "ń"
-        ],
-        "c": [
-            "č",
-            "ç",
-            "ć"
-        ],
-        "y": [
-            "ý",
-            "ÿ"
-        ],
-        "d": [
-            "ď"
-        ],
-        "r": [
-            "ŗ",
-            "ř",
-            "ŕ"
-        ],
-        "t": [
-            "ţ",
-            "ť"
-        ],
-        "z": [
-            "ž",
+        "misc_z": [
             "ż",
             "ź"
-        ],
-        "k": [
-            "ķ"
-        ],
-        "l": [
-            "ļ",
-            "ł",
-            "ĺ",
-            "ľ"
-        ],
-        "g": [
-            "ģ",
-            "ğ"
         ]
     },
     "keyspec": {},
