--- a/tools/make-keyboard-text-py/locales/nl.json
+++ b/tools/make-keyboard-text-py/locales/nl.json
@@ -5,20 +5,13 @@
             "á",
             "ä",
             "â",
-            "à",
-            "æ",
-            "ã",
-            "å",
-            "ā"
+            "à"
         ],
         "e": [
             "é",
             "ë",
             "ê",
-            "è",
-            "ę",
-            "ė",
-            "ē"
+            "è"
         ],
         "i": [
             "í",
@@ -31,7 +24,24 @@
         ],
         "o": [
             "ó",
-            "ö",
+            "ö"
+        ],
+        "u": [
+            "ú",
+            "ü"
+        ],
+        "misc_a": [
+            "æ",
+            "ã",
+            "å",
+            "ā"
+        ],
+        "misc_e": [
+            "ę",
+            "ė",
+            "ē"
+        ],
+        "misc_o": [
             "ô",
             "ò",
             "õ",
@@ -39,19 +49,10 @@
             "ø",
             "ō"
         ],
-        "u": [
-            "ú",
-            "ü",
+        "misc_u": [
             "û",
             "ù",
             "ū"
-        ],
-        "n": [
-            "ñ",
-            "ń"
-        ],
-        "y": [
-            "ĳ"
         ]
     },
     "keyspec": {},
