--- a/tools/make-keyboard-text-py/locales/pl.json
+++ b/tools/make-keyboard-text-py/locales/pl.json
@@ -2,7 +2,31 @@
     "locale": "pl",
     "morekeys": {
         "a": [
-            "ą",
+            "ą"
+        ],
+        "c": [
+            "ć"
+        ],
+        "e": [
+            "ę"
+        ],
+        "l": [
+            "ł"
+        ],
+        "n": [
+            "ń"
+        ],
+        "o": [
+            "ó"
+        ],
+        "s": [
+            "ś"
+        ],
+        "z": [
+            "ż",
+            "ź"
+        ],
+        "misc_a": [
             "á",
             "à",
             "â",
@@ -12,8 +36,11 @@
             "å",
             "ā"
         ],
-        "e": [
-            "ę",
+        "misc_c": [
+            "ç",
+            "č"
+        ],
+        "misc_e": [
             "è",
             "é",
             "ê",
@@ -21,8 +48,10 @@
             "ė",
             "ē"
         ],
-        "o": [
-            "ó",
+        "misc_n": [
+            "ñ"
+        ],
+        "misc_o": [
             "ö",
             "ô",
             "ò",
@@ -31,27 +60,12 @@
             "ø",
             "ō"
         ],
-        "s": [
-            "ś",
+        "misc_s": [
             "ß",
             "š"
         ],
-        "n": [
-            "ń",
-            "ñ"
-        ],
-        "c": [
-            "ć",
-            "ç",
-            "č"
-        ],
-        "z": [
-            "ż",
-            "ź",
+        "misc_z": [
             "ž"
-        ],
-        "l": [
-            "ł"
         ]
     },
     "keyspec": {},
