--- a/tools/make-keyboard-text-py/locales/pt.json
+++ b/tools/make-keyboard-text-py/locales/pt.json
@@ -5,33 +5,52 @@
             "á",
             "ã",
             "à",
-            "â",
+            "â"
+        ],
+        "c": [
+            "ç"
+        ],
+        "e": [
+            "é",
+            "ê"
+        ],
+        "i": [
+            "í"
+        ],
+        "o": [
+            "ó",
+            "õ",
+            "ô"
+        ],
+        "u": [
+            "ú",
+            "ü"
+        ],
+        "misc_a": [
             "ä",
             "å",
             "æ",
             "ª"
         ],
-        "e": [
-            "é",
-            "ê",
+        "misc_c": [
+            "č",
+            "ć"
+        ],
+        "misc_e": [
             "è",
             "ę",
             "ė",
             "ē",
             "ë"
         ],
-        "i": [
-            "í",
+        "misc_i": [
             "î",
             "ì",
             "ï",
             "į",
             "ī"
         ],
-        "o": [
-            "ó",
-            "õ",
-            "ô",
+        "misc_o": [
             "ò",
             "ö",
             "œ",
@@ -39,17 +58,10 @@
             "ō",
             "º"
         ],
-        "u": [
-            "ú",
-            "ü",
+        "misc_u": [
             "ù",
             "û",
             "ū"
-        ],
-        "c": [
-            "ç",
-            "č",
-            "ć"
         ]
     },
     "keyspec": {
