--- a/tools/make-keyboard-text-py/locales/ro.json
+++ b/tools/make-keyboard-text-py/locales/ro.json
@@ -3,7 +3,18 @@
     "morekeys": {
         "a": [
             "ă",
-            "â",
+            "â"
+        ],
+        "i": [
+            "î"
+        ],
+        "s": [
+            "ș"
+        ],
+        "t": [
+            "ț"
+        ],
+        "misc_a": [
             "ã",
             "à",
             "á",
@@ -12,22 +23,17 @@
             "å",
             "ā"
         ],
-        "i": [
-            "î",
+        "misc_i": [
             "ï",
             "ì",
             "í",
             "į",
             "ī"
         ],
-        "s": [
-            "ș",
+        "misc_s": [
             "ß",
             "ś",
             "š"
-        ],
-        "t": [
-            "ț"
         ]
     },
     "keyspec": {},
