--- a/tools/make-keyboard-text-py/locales/sk.json
+++ b/tools/make-keyboard-text-py/locales/sk.json
@@ -3,7 +3,50 @@
     "morekeys": {
         "a": [
             "á",
-            "ä",
+            "ä"
+        ],
+        "c": [
+            "č"
+        ],
+        "d": [
+            "ď"
+        ],
+        "e": [
+            "é"
+        ],
+        "i": [
+            "í"
+        ],
+        "l": [
+            "ľ",
+            "ĺ"
+        ],
+        "n": [
+            "ň"
+        ],
+        "o": [
+            "ô",
+            "ó"
+        ],
+        "r": [
+            "ŕ"
+        ],
+        "s": [
+            "š"
+        ],
+        "t": [
+            "ť"
+        ],
+        "u": [
+            "ú"
+        ],
+        "y": [
+            "ý"
+        ],
+        "z": [
+            "ž"
+        ],
+        "misc_a": [
             "ā",
             "à",
             "â",
@@ -12,8 +55,11 @@
             "æ",
             "ą"
         ],
-        "e": [
-            "é",
+        "misc_c": [
+            "ç",
+            "ć"
+        ],
+        "misc_e": [
             "ě",
             "ē",
             "ė",
@@ -22,8 +68,7 @@
             "ë",
             "ę"
         ],
-        "i": [
-            "í",
+        "misc_i": [
             "ī",
             "į",
             "ì",
@@ -31,9 +76,16 @@
             "ï",
             "ı"
         ],
-        "o": [
-            "ô",
-            "ó",
+        "misc_l": [
+            "ļ",
+            "ł"
+        ],
+        "misc_n": [
+            "ņ",
+            "ñ",
+            "ń"
+        ],
+        "misc_o": [
             "ö",
             "ò",
             "õ",
@@ -41,8 +93,19 @@
             "ő",
             "ø"
         ],
-        "u": [
-            "ú",
+        "misc_r": [
+            "ř",
+            "ŗ"
+        ],
+        "misc_s": [
+            "ß",
+            "ś",
+            "ş"
+        ],
+        "misc_t": [
+            "ţ"
+        ],
+        "misc_u": [
             "ů",
             "ü",
             "ū",
@@ -51,56 +114,12 @@
             "û",
             "ű"
         ],
-        "s": [
-            "š",
-            "ß",
-            "ś",
-            "ş"
-        ],
-        "n": [
-            "ň",
-            "ņ",
-            "ñ",
-            "ń"
-        ],
-        "c": [
-            "č",
-            "ç",
-            "ć"
-        ],
-        "y": [
-            "ý",
+        "misc_y": [
             "ÿ"
         ],
-        "d": [
-            "ď"
-        ],
-        "r": [
-            "ŕ",
-            "ř",
-            "ŗ"
-        ],
-        "t": [
-            "ť",
-            "ţ"
-        ],
-        "z": [
-            "ž",
+        "misc_z": [
             "ż",
             "ź"
-        ],
-        "k": [
-            "ķ"
-        ],
-        "l": [
-            "ľ",
-            "ĺ",
-            "ļ",
-            "ł"
-        ],
-        "g": [
-            "ģ",
-            "ğ"
         ]
     },
     "keyspec": {},
