--- a/tools/make-keyboard-text-py/locales/sl.json
+++ b/tools/make-keyboard-text-py/locales/sl.json
@@ -1,18 +1,17 @@
 {
     "locale": "sl",
     "morekeys": {
+        "c": [
+            "č"
+        ],
         "s": [
             "š"
         ],
-        "c": [
-            "č",
-            "ć"
-        ],
-        "d": [
-            "đ"
-        ],
         "z": [
             "ž"
+        ],
+        "misc_c": [
+            "ć"
         ]
     },
     "keyspec": {},
