--- a/tools/make-keyboard-text-py/locales/tr.json
+++ b/tools/make-keyboard-text-py/locales/tr.json
@@ -1,17 +1,29 @@
 {
     "locale": "tr",
     "morekeys": {
-        "a": [
-            "â",
-            "ä",
-            "á"
+        "c": [
+            "ç"
         ],
-        "e": [
-            "ə",
-            "é"
+        "g": [
+            "ğ"
         ],
         "i": [
-            "ı",
+            "ı"
+        ],
+        "o": [
+            "ö"
+        ],
+        "s": [
+            "ş"
+        ],
+        "u": [
+            "ü"
+        ],
+        "misc_c": [
+            "ć",
+            "č"
+        ],
+        "misc_i": [
             "î",
             "ï",
             "ì",
@@ -19,8 +31,7 @@
             "į",
             "ī"
         ],
-        "o": [
-            "ö",
+        "misc_o": [
             "ô",
             "œ",
             "ò",
@@ -29,36 +40,16 @@
             "ø",
             "ō"
         ],
-        "u": [
-            "ü",
-            "û",
-            "ù",
-            "ú",
-            "ū"
-        ],
-        "s": [
-            "ş",
+        "misc_s": [
             "ß",
             "ś",
             "š"
         ],
-        "g": [
-            "ğ"
-        ],
-        "n": [
-            "ň",
-            "ñ"
-        ],
-        "c": [
-            "ç",
-            "ć",
-            "č"
-        ],
-        "y": [
-            "ý"
-        ],
-        "z": [
-            "ž"
+        "misc_u": [
+            "û",
+            "ù",
+            "ú",
+            "ū"
         ]
     },
     "keyspec": {},
