--- a/tools/make-keyboard-text-py/locales/sv.json
+++ b/tools/make-keyboard-text-py/locales/sv.json
@@ -3,7 +3,15 @@
     "morekeys": {
         "a": [
             "ä",
-            "å",
+            "å"
+        ],
+        "e": [
+            "é"
+        ],
+        "o": [
+            "ö"
+        ],
+        "misc_a": [
             "æ",
             "á",
             "à",
@@ -11,38 +19,13 @@
             "ą",
             "ã"
         ],
-        "c": [
-            "ç",
-            "ć",
-            "č"
-        ],
-        "d": [
-            "ð",
-            "ď"
-        ],
-        "e": [
-            "é",
+        "misc_e": [
             "è",
             "ê",
             "ë",
             "ę"
         ],
-        "i": [
-            "í",
-            "ì",
-            "î",
-            "ï"
-        ],
-        "l": [
-            "ł"
-        ],
-        "n": [
-            "ń",
-            "ñ",
-            "ň"
-        ],
-        "o": [
-            "ö",
+        "misc_o": [
             "ø",
             "œ",
             "ó",
@@ -51,41 +34,12 @@
             "õ",
             "ō"
         ],
-        "r": [
-            "ř"
-        ],
-        "s": [
-            "ś",
-            "š",
-            "ş",
-            "ß"
-        ],
-        "t": [
-            "ť",
-            "þ"
-        ],
-        "u": [
-            "ü",
-            "ú",
-            "ù",
-            "û",
-            "ū"
-        ],
-        "y": [
-            "ý",
-            "ÿ"
-        ],
-        "z": [
-            "ź",
-            "ž",
-            "ż"
-        ],
-        "nordic_row2_11": [
-            "æ"
-        ],
         "nordic_row2_10": [
             "ø",
             "œ"
+        ],
+        "nordic_row2_11": [
+            "æ"
         ]
     },
     "keyspec": {
