Fix missing morekeys in default layout causing null to be morekey

--- a/tools/make-keyboard-text-py/locales/DEFAULT.json
+++ b/tools/make-keyboard-text-py/locales/DEFAULT.json
@@ -1,32 +1,51 @@
 {
     "locale": "DEFAULT",
     "morekeys": {
-        "q": [],
-        "w": [],
-        "e": [],
-        "r": [],
-        "t": [],
-        "y": [],
-        "u": [],
-        "i": [],
-        "o": [],
-        "p": [],
         "a": [],
-        "s": [],
+        "b": [],
+        "c": [],
         "d": [],
+        "e": [],
         "f": [],
         "g": [],
         "h": [],
+        "i": [],
         "j": [],
         "k": [],
         "l": [],
-        "z": [],
-        "x": [],
-        "c": [],
-        "v": [],
-        "b": [],
-        "n": [],
         "m": [],
+        "n": [],
+        "o": [],
+        "p": [],
+        "q": [],
+        "r": [],
+        "s": [],
+        "t": [],
+        "u": [],
+        "v": [],
+        "w": [],
+        "x": [],
+        "y": [],
+        "z": [],
+
+        "misc_b": [],
+        "misc_d": [],
+        "misc_f": [],
+        "misc_g": [],
+        "misc_h": [],
+        "misc_j": [],
+        "misc_k": [],
+        "misc_l": [],
+        "misc_m": [],
+        "misc_p": [],
+        "misc_q": [],
+        "misc_r": [],
+        "misc_t": [],
+        "misc_v": [],
+        "misc_w": [],
+        "misc_x": [],
+        "misc_y": [],
+        "misc_z": [],
 
         "misc_a": [
             "à",
