Add punctuation on period key for Arabic and Persian

--- a/tools/make-keyboard-text-py/locales/ar.json
+++ b/tools/make-keyboard-text-py/locales/ar.json
@@ -46,21 +46,23 @@
             "!text/keyspecs_right_parenthesis_more_keys"
         ],
         "arabic_diacritics": [
-            "!fixedColumnOrder!7",
-            " ٕ|ٕ",
-            " ٔ|ٔ",
-            " ْ|ْ",
-            " ٍ|ٍ",
-            " ٌ|ٌ",
-            " ً|ً",
-            " ّ|ّ",
-            " ٖ|ٖ",
-            " ٰ|ٰ",
-            " ٓ|ٓ",
-            " ِ|ِ",
-            " ُ|ُ",
-            " َ|َ",
-            "ـــ|ـ"
+            "!fixedColumnOrder!8",
+            " \u0654◌|\u0654",
+            " \u0652◌|\u0652",
+            " \u064d◌|\u064d",
+            " \u064c◌|\u064c",
+            " \u0651◌|\u0651",
+            " \u064b◌|\u064b",
+            "!text/keyspec_symbols_question",
+            "!",
+            " \u0656◌|\u0656",
+            " \u0670◌|\u0670",
+            " \u0653◌|\u0653",
+            " \u0650◌|\u0650",
+            " \u064f◌|\u064f",
+            "\u0640",
+            " \u0655◌|\u0655",
+            " \u064e◌|\u064e"
         ]
     },
     "keyspec": {
